# rdk-xr-voice-sdk

./: .gitignore  CONTRIBUTING.md  configure.ac
src/: Makefile.am  vsdk.c  xr_voice_sdk.h
src/doxygen/: build_docs.py  vsdk_api_all
